[tool.poetry]
name = "circuit-cli"
version = "0.1.0"
description = ""
authors = ["Sebastjan Trepca <set@circuitdao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
chia-blockchain = "2.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
circuit-cli = "circuit_cli.circuit_rpc_cli:main"
price-announcer-cli = "circuit_cli.price_announcer_cli:main"
keeper-cli = "circuit_cli.keeper_cli:main"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
