[tool.poetry]
name = "circuit-cli"
version = "0.1.0"
description = "CLI tool to manage your Circuit collateral vault, savings and upkeep the protocol/DAO"
authors = ["trepca <set@circuitdao.com>", "nimcon <nin@circuitdao.com>"]
readme = "README.md"
keywords = ["circuit", "chia", "blockchain", "dao", "cli"]
homepage = "https://circuitdao.com"
repository = "https://github.com/circuitdao/circuit-cli"
license = "Proprietary"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
chia-blockchain = "2.5.5"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/circuitdao/circuit-cli/issues"
"Source" = "https://github.com/circuitdao/circuit-cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
circuit-cli = "circuit_cli.circuit_rpc_cli:main"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
